# mni

./: .gitignore  CMakeLists.txt  Makefile
includes/: minishell.h
libft/: Makefile  ft_atoi.c  ft_atoi2.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lst_to_matrix.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_matrix_dup.c  ft_matrix_extend.c  ft_matrix_free.c  ft_matrix_replace_in.c  ft_matrixlen.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putmatrix_fd.c  ft_putnbr_base_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  (+21 more)
srcs/: .get_parameters.c.swp  builtins.c  builtins_utils.c  env.c  error.c  error2.c  execution.c  expansion.c  fill_nodes.c  ft_cmd_split.c  ft_cmd_trim.c  ft_strtrim_all.c  get_cmd.c  get_parameters.c  handle_sigint.c  handle_signal.c  heredoc.c  last_cmd.c  main.c  parse_arguments.c  prompt.c
